src/test/deca/context/valid/inheritance/subclass_override_method_ok.deca
// Description :
// Sous-classe redéfinit méthode avec même signature et type
//
// Resultats :
// ok

class H {
    int f() { return 1; }
}
class I extends H {
    int f() { return 2; }
}
