src/test/deca/context/invalid/return/return_object_in_int_custom.deca
// Description :
// return d’un objet dans méthode int
//
// Resultats :
// Erreur contextuelle
// Ligne 7 : type de retour incompatible

class H {}
class I {
    int f() {
        return new H(); // invalide
    }
}
